# pg_typescript

./: .editorconfig  .gitignore  Cargo.toml  Justfile  README.md  build.rs  flake.nix  pg_typescript.control
.cargo/: config.toml
.github/workflows/: ci.yml  v8-prebuilt.yml
examples/: README.md
examples/pg_execute/: README.md  read_two_tables.ts  run.sh  setup.sql
examples/postgrest/: README.md  bootstrap.sql  run.sh  setup.sql
examples/streaming/: README.md  bootstrap.sql  producer.py  run.sh  setup.sql
src/: convert.rs  fetch.rs  guc.rs  lib.rs  loader.rs  module_store.rs  permissions.rs  plhandler.rs  resolve.rs  runtime.rs
src/extensions/: console.rs  mod.rs  pg.rs
src/js/: console_bridge.js  console_hook.js  pg_bridge.js  pg_hook.js
tests/pg_regress/expected/: async.out  composite.out  console_log.out  do_blocks.out  drop_recreate.out  import_isolation.out  import_lodash.out  js_features.out  jsonb.out  net_fetch_lodash.out  null_handling.out  permissions.out  pg_execute.out  record.out  runtime_type_mismatch.out  select_aggregate.out  setup.out  type_roundtrips.out  type_support_matrix.out  validator.out
tests/pg_regress/sql/: async.sql  composite.sql  console_log.sql  do_blocks.sql  drop_recreate.sql  import_isolation.sql  import_lodash.sql  js_features.sql  jsonb.sql  net_fetch_lodash.sql  null_handling.sql  permissions.sql  pg_execute.sql  record.sql  runtime_type_mismatch.sql  select_aggregate.sql  setup.sql  type_roundtrips.sql  type_support_matrix.sql  validator.sql
tests/profiling/: README.md  pg_execute_workload.sql  setup_vs_exec.sql
