[package]
name = "pg_typescript"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_typescript"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg18"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg_test = []

[dependencies]
pgrx = "=0.17.0"
deno_core = "0.387.0"
tokio = { version = "1", features = ["rt", "time"] }
serde = "1"
serde_json = "1"
ureq = "2"
deno_error = "0.7.3"
deno_ast = { version = "=0.52.0", features = ["transpiling"] }

[dev-dependencies]
pgrx-tests = "=0.17.0"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
