[package]
name = "pg_typescript"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_typescript"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg18"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg_test = []

[dependencies]
pgrx = "=0.17.0"
deno_core = "0.386.0"
deno_runtime = { version = "0.242.0", features = ["transpile"] }
tokio = { version = "1", features = ["rt", "time"] }
serde = "1"
serde_json = "1"
ureq = "2"
deno_error = "=0.7.1"
deno_ast = { version = "=0.53.1", features = ["transpiling"] }
sys_traits = "0.1.24"
node_resolver = "0.72.0"
deno_semver = "=0.9.1"

[dev-dependencies]
pgrx-tests = "=0.17.0"

[build-dependencies]
deno_runtime = { version = "0.242.0", features = ["snapshot"] }

# Use the local rusty_v8 fork so Linux source builds can pick up local
# Chromium build submodule changes while iterating.
[patch.crates-io]
v8 = { path = "../rusty_v8" }

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
